# qhull-simple

./: .gitignore  LICENSE  default.nix  qhull-simple.cabal  stack.yaml  test.sh
benchmark/: Benchmark.hs  build.sh
foreign-src/: qhull_wrapper.c  qhull_wrapper.h
src/Numeric/: Qhull.hs
test/: Main.hi  Main.hs  build.sh  generate-ball.py  octave.m  plot.py
