name:
  qhull-simple
version:
  0.1
synopsis:
  Simple bindings to Qhull, a library for computing convex hulls
homepage:
  http://nonempty.org/software/haskell-qhull-simple
license:
  BSD3
license-file:
  LICENSE
author:
  Gard Spreemann
maintainer:
  Gard Spreemann <gspreemann@gmail.com>
copyright:
  Bindings: 2013 Gard Spreemann.  Qhull itself: 1992-2012 C. B. Arber and The
  Geometry Center , University of Minnesota.
category:
  Math
build-type:
  Simple
extra-source-files:
  foreign-src/qhull_wrapper.h
cabal-version:
  >=1.8
description:
  Simple bindings to Qhull, a C library (<http://qhull.org>) for computing
  convex hulls. Currently, only convex hull computation in the @Qt@ and/or @Qx@
  modes is supported.

  The Qhull library itself is not included, as I consider it a dependency.
  Cabal's @--extra-include-dirs@ and @--extra-lib-dirs@ can be used if the
  Qhull headers and shared objects are not in GCC's search path.

  Hackage probably fails to build the Haddock documentation since Qhull itself
  is missing. The documentation can be viewed at
  <http://nonempty.org/software/haskell-qhull-simple/>.

  Qhull itself is copyright 1992-2012 C. B. Arber and The Geometry Center,
  University of Minnesota.

  Notes:

    * The current version has only been tested /very lightly/, and only with
      version 2009.1 of Qhull.

    * The API will probably change drastically in future versions, especially
      to be more flexible with regards to input data formats.

  Changes in version 0.1:

    * Initial release.

library
  exposed-modules:
    Numeric.Qhull
  other-modules:
  hs-source-dirs:
    src
  build-depends:
    base,
    vector
  c-sources:
    foreign-src/qhull_wrapper.c
  cc-options:
    -std=c99 -Wall -DNDEBUG
  extra-libraries:
    qhull
    pthread
  include-dirs:
    foreign-src

test-suite test-unsymmetric
  hs-source-dirs:
    test
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base,
    vector,
    qhull-simple
